# git-recap

./: README.md  pyproject.toml
.github/workflows/: publish.yml
git_recap/: __init__.py  cli.py  config.py  git.py  summarizer.py
tests/: test_cli.py  test_config.py  test_git.py  test_summarizer.py
